--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -100,3 +100,19 @@ pages = {34},
     url = {https://www.regjeringen.no/no/tema/Koronasituasjonen/tidslinje-koronaviruset/id2692402/},
     urldate = {2023-06-15}
 }
+
+@online{ssblifeexpectancy, 
+    author = {{Statistics Norway}},
+    title = {Life expectancy fell in 2022},
+    year = 2023,
+    url = {https://www.ssb.no/befolkning/fodte-og-dode/statistikk/dode/artikler/forventa-levealder-falt-i-2022},
+    urldate = {2023-03-07}
+}
+
+@online{nrknormal, 
+    author = {Espen Kjendlie and Ingrid Emilie Waaler and Kristine Kjendalen and Mathilde Moe Kaupang},
+    title = {Life expectancy fell in 2022},
+    year = 2023,
+    url = {https://www.nrk.no/norge/fhi-og-helsedirektoratet-anbefaler-gjenapning-om-en-uke-1.15664558},
+    urldate = {2021-09-24}
+}
